stop wrapping text around list items

--- a/main.css
+++ b/main.css
@@ -1,8 +1,9 @@
 body {
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     font-weight: 100;
-    line-height: 2em;
+    line-height: 2rem;
     color: #333;
+    font-size: 16px;
 }
 
 h1, h2, h3 {
@@ -10,16 +11,16 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2rem;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: #8cc84b;
 }
 
 h3 {
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
 
 em {
@@ -27,7 +28,7 @@ em {
 }
 
 img {
-    max-width: 60%;
+    max-width: 100%;
 }
 
 .logo {
@@ -49,7 +50,13 @@ img {
 }
 
 .column-aligner-item {
-    max-width: 60%;
+    max-width: 90%;
+}
+
+@media screen and (min-width : 1100px) {
+    .column-aligner-item {
+        max-width: 60%;
+    }
 }
 
 .contact {
@@ -76,7 +83,7 @@ img {
 
 .copyright {
     float: right;;
-    font-size: 0.8em;
+    font-size: 0.8rem;
 }
 
 .inline-block {
@@ -102,6 +109,7 @@ img {
 
 .learning-outcomes {
     list-style: none;
+    padding-left: 0;
 }
 
 .learning-outcomes li:nth-child(odd) {
@@ -109,18 +117,20 @@ img {
 }
 
 .learning-outcomes li {
-    padding: 10px;
+    padding: 20px;
+    padding-left: 30px;
     cursor: pointer;
-}
-
-.learning-outcomes li.hidden:before {
-    content: '\25BA';
-    color: #8cc84b;
-    margin-right: 10px;
+    position: relative;
 }
 
 .learning-outcomes li:before {
     content: '\25BC';
     color: #8cc84b;
     margin-right: 10px;
+    position: absolute;
+    left: 10px;
+}
+
+.learning-outcomes li.hidden:before {
+    content: '\25BA';
 }
